Insert Booking, API Request & Empty Test

--- a/dominiondiamondhotel/dominiondiamondhotel-model/pom.xml
+++ b/dominiondiamondhotel/dominiondiamondhotel-model/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>dominiondiamondhotel-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
