--- a/dominiondiamondhotel/pom.xml
+++ b/dominiondiamondhotel/pom.xml
@@ -51,6 +51,12 @@
                 <artifactId>dominiondiamondhotel-ws</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <modules>
