--- a/dominiondiamondhotel/pom.xml
+++ b/dominiondiamondhotel/pom.xml
@@ -51,12 +51,14 @@
                 <artifactId>dominiondiamondhotel-ws</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
-            <dependency>
-               <groupId>com.ontimize.jee</groupId>
-               <artifactId>ontimize-jee-common</artifactId>
-           </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>com.ontimize.jee</groupId>
+            <artifactId>ontimize-jee-common</artifactId>
+        </dependency>
+    </dependencies>
     <modules>
         <module>dominiondiamondhotel-api</module>
         <module>dominiondiamondhotel-model</module>
