--- a/dominiondiamondhotel/dominiondiamondhotel-ws/pom.xml
+++ b/dominiondiamondhotel/dominiondiamondhotel-ws/pom.xml
@@ -18,5 +18,10 @@
 			<groupId>com.ontimize.boot</groupId>
 			<artifactId>ontimize-boot-starter-rest</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+    </dependencies>
 </project>
