--- a/dominiondiamondhotel/dominiondiamondhotel-model/pom.xml
+++ b/dominiondiamondhotel/dominiondiamondhotel-model/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.8.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
